@@ -1447,7 +1447,6 @@
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="response_id">-6</property>
-	      <signal name="clicked" handler="destroy_passed_object" object="loc_edit"/>
 	    </widget>
 	  </child>
 
@@ -1461,7 +1460,6 @@
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="response_id">-5</property>
-	      <signal name="clicked" handler="on_loc_edit_ok_clicked" object="loc_edit"/>
 	    </widget>
 	  </child>
 
